--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,4 +1,5 @@
-.align-form{
+.wrapper{
+    width: 100%;
     display: flex;
     align-items: center;
     height: 100vh;
@@ -6,3 +7,31 @@
     flex-direction: column;
 
 }
+
+.login-card{
+    width: 30%;
+    height: 50%;
+    background-color: #87CEFA;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 20px;
+
+}
+
+.login-card__title{
+    color: #ffffff;
+    margin: 30px 0px;
+    
+
+}
+
+.btn-login{
+    width: 100%;
+    margin-top: 20px;
+}
+
+
+
