--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -11,7 +11,7 @@
 .login-card{
     width: 30%;
     height: 50%;
-    background-color: #87CEFA;
+    background-color: #ADD8E6;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     display: flex;
     align-items: center;
