--- a/src/components/ClientPatientRegisterForm.css
+++ b/src/components/ClientPatientRegisterForm.css
@@ -1,5 +1,4 @@
 .wrapper{
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,13 +10,12 @@
 }
 
 label{
-    margin-right: 160px;
-    
+    margin-right: 15px;
+
 }
 
 .card{
-    width: 80%;
-    padding: 30px;
+    padding: 30px 90px;
     background-color: #ADD8E6;
     box-shadow: 0 4px 8px 2px rgba(0,0,0,0.6);
     display: flex;
