--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -9,8 +9,9 @@
 }
 
 .login-card{
-    width: 30%;
-    height: 50%;
+    /* width: 100%; */
+    /* height: 50%; */
+    padding: 30px 90px;
     background-color: #ADD8E6;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     display: flex;
@@ -21,9 +22,15 @@
 
 }
 
+.login-card__title1{
+    color: #ffffff;
+    margin-bottom: 40px;
+    font-size: 24px;
+}
+
 .login-card__title{
     color: #ffffff;
-    margin: 30px 0px;
+    margin: 20px 0 40px 0px;
     
 
 }
@@ -33,8 +40,15 @@
     margin-top: 20px;
 }
 
-.register-card{
-    width: 50%;
+.input-field{
+    width: 350px;
+    height: 50px;
 }
+
+.register-now{
+    margin-top: 15px;
+    text-align: center;
+}
+
 
 
