--- a/src/components/ClientPatientRegisterForm.css
+++ b/src/components/ClientPatientRegisterForm.css
@@ -15,6 +15,7 @@ label{
 }
 
 .card{
+    margin-top: 200px;
     padding: 30px 90px;
     background-color: #ADD8E6;
     box-shadow: 0 4px 8px 2px rgba(0,0,0,0.6);
