--- a/src/components/ClientPatientRegisterForm.css
+++ b/src/components/ClientPatientRegisterForm.css
@@ -1,11 +1,10 @@
-.wrapper{
+.form-wrapper{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     font-family: 'Roboto Slab', serif;
-    background-color: #F0FFFF;
-    
+    background-color: #F0FFFF;   
 
 }
 
@@ -15,7 +14,7 @@ label{
 }
 
 .card{
-    margin-top: 200px;
+    margin-top: 50px;
     padding: 30px 90px;
     background-color: #ADD8E6;
     box-shadow: 0 4px 8px 2px rgba(0,0,0,0.6);
